add parameters to open api schema for get method
