# test/src/test/testtool/Validators/Schema/openapi.json
@@ -8,7 +8,121 @@
     "paths":{
         "/soapvalidator/item":{
             "get":{
-                "operationId":"listener of [SoapValidator-API]",
+                "parameters":[
+                    {
+                        "name":"Status",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Item/Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Attributes/Attribute/Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "description":"OK",
+                        "content":{
+                            "*/*":{
+                                "schema":{
+                                    "$ref":"#/components/schemas/Item_Response"
+                                }
+                            }
+                        }
+                    },
+                    "304":{
+                        "description":"Not Modified"
+                    },
+                    "400":{
+                        "description":"Bad Request"
+                    },
+                    "401":{
+                        "description":"Unauthorized"
+                    },
+                    "403":{
+                        "description":"Forbidden"
+                    },
+                    "500":{
+                        "description":"Internal Server Error",
+                        "content":{
+                            "*/*":{
+                                "schema":{
+                                    "$ref":"#/components/schemas/Item_Response"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/soapvalidator/{subPath}/items/{subPath2}":{
+            "get":{
+                "operationId":"UniqueIdSoapValidator",
+                "parameters":[
+                    {
+                        "name":"subPath",
+                        "in":"path",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"subPath2",
+                        "in":"path",
+                        "required":true,
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Status",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Item/Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    },
+                    {
+                        "name":"Attributes/Attribute/Id",
+                        "in":"query",
+                        "schema":{
+                            "type":"string"
+                        }
+                    }
+                ],
                 "responses":{
                     "200":{
                         "description":"OK",
